--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.2.4"
   },
   "dependencies": {
-    "sass-flex-mixin": "^1.0.1"
+    "sass-flex-mixin": "^1.0.1",
+    "a0-angular-storage": "^0.0.15"
   }
 }
