--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-dialogs",
+    {
+      "variables": {
+        "APP_ID": "471853126340957",
+        "APP_NAME": "dentista"
+      },
+      "locator": "cordova-plugin-facebook4",
+      "id": "cordova-plugin-facebook4"
+    }
   ],
   "cordovaPlatforms": [
     "android"
